--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
 
     .banner {
       background-image: url('IMG_5572.JPG');
-      background-size: cover;
+      background-size: contain;
+      background-repeat: no-repeat;
       background-position: center;
-      padding: 60px 40px;
+      padding: 40px 40px;
       width: 100%;
       display: flex;
       justify-content: flex-start;
