--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     main {
       display: flex;
       justify-content: flex-start;
-      padding: 0;
       flex-direction: column;
       align-items: flex-start;
+      padding: 0;
     }
 
     .banner {
@@ -57,10 +57,12 @@
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-      padding: 100px 100px;
+      min-height: 300px;
       width: 100%;
       display: flex;
       justify-content: flex-start;
+      align-items: center;
+      padding: 20px 40px;
     }
 
     .profile-block {
