--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
       padding: 0;
     }
 
-    .banner-container {
+    .banner-section {
       position: relative;
       width: 100%;
     }
 
-    .banner-container img {
+    .banner-section img {
       width: 100%;
       height: auto;
       display: block;
     }
 
-    .profile-overlay {
+    .banner-overlay {
       position: absolute;
       top: 50%;
       left: 40px;
@@ -152,10 +152,10 @@
   </header>
 
   <main>
-    <!-- Full Width Banner with Overlay -->
-    <div class="banner-container">
+    <!-- Full-Width Banner Image -->
+    <div class="banner-section">
       <img src="IMG_5572.JPG" alt="Banner Image" />
-      <div class="profile-overlay">
+      <div class="banner-overlay">
         <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
         <div class="titles">
           <h2>Product Designer</h2>
