--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       width: 100%;
     }
 
-    .banner-section img {
+    .banner-img {
       width: 100%;
       height: auto;
       display: block;
@@ -76,8 +76,8 @@
     }
 
     .profile-pic {
-      width: 100px;
-      height: 100px;
+      width: 100px !important;
+      height: 100px !important;
       border-radius: 50%;
       object-fit: cover;
       filter: grayscale(100%);
@@ -154,9 +154,9 @@
   <main>
     <!-- Full-Width Banner Image -->
     <div class="banner-section">
-      <img src="IMG_5572.JPG" alt="Banner Image" />
+      <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
       <div class="banner-overlay">
-        <img src="profile.jpg" alt="Jack Simm" class="profile-pic">
+        <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
         <div class="titles">
           <h2>Product Designer</h2>
           <h2>Product Development Manager</h2>
