--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     }
 
     .container {
-      max-width: 1000px;
+      max-width: 1200px;
       background: #fff;
       border-radius: 16px;
       padding: 40px;
       display: flex;
       flex-direction: column;
       gap: 40px;
-      margin: 40px;
+      margin: 40px auto;
     }
 
     .button {
@@ -137,6 +137,27 @@
     .column {
       flex: 1;
       min-width: 300px;
+    }
+
+    @media (max-width: 768px) {
+      .banner-overlay {
+        flex-direction: column;
+        align-items: flex-start;
+        left: 20px;
+        padding: 15px;
+        gap: 12px;
+        width: calc(100% - 40px);
+      }
+
+      .profile-pic {
+        width: 100px !important;
+        height: 100px !important;
+      }
+
+      .container {
+        margin: 20px;
+        padding: 20px;
+      }
     }
   </style>
 </head>
@@ -204,18 +225,14 @@
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
 
-    toggle.addEventListener("mouseenter", () => {
-      menu.style.display = "flex";
+    toggle.addEventListener("click", () => {
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
     });
 
-    toggle.addEventListener("mouseleave", () => {
-      setTimeout(() => {
-        if (!menu.matches(":hover")) menu.style.display = "none";
-      }, 200);
-    });
-
-    menu.addEventListener("mouseleave", () => {
-      menu.style.display = "none";
+    document.addEventListener("click", (e) => {
+      if (!toggle.contains(e.target) && !menu.contains(e.target)) {
+        menu.style.display = "none";
+      }
     });
   </script>
 </body>
