--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     }
 
     .container {
-      max-width: 1200px;
+      max-width: 900px; /* narrower container */
       background: #fff;
       border-radius: 16px;
       padding: 40px;
       display: flex;
       flex-direction: column;
       gap: 40px;
-      margin: 40px auto;
+      margin: 40px auto; /* centers the box with side space */
     }
 
     .button {
