--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     }
 
     .container {
-      max-width: 900px; /* narrower container */
+      max-width: 900px;
       background: #fff;
       border-radius: 16px;
       padding: 40px;
       display: flex;
       flex-direction: column;
       gap: 40px;
-      margin: 40px auto; /* centers the box with side space */
+      margin: 40px auto;
     }
 
     .button {
@@ -137,6 +137,30 @@
     .column {
       flex: 1;
       min-width: 300px;
+    }
+
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .skill {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    .skill-icon {
+      width: 50px;
+      height: 50px;
+      margin-bottom: 10px;
+    }
+
+    .skill-name {
+      font-size: 0.95rem;
     }
 
     @media (max-width: 768px) {
@@ -207,13 +231,40 @@
           </ul>
 
           <h3 style="margin-top: 30px;">Skills</h3>
-          <ul>
-            <li>CAD Modelling (SolidWorks, Shapr3D)</li>
-            <li>Adobe Suite (Photoshop, Illustrator, InDesign)</li>
-            <li>Rapid Prototyping</li>
-            <li>User-Centred Design</li>
-            <li>Production Coordination</li>
-          </ul>
+          <div class="skills-grid">
+            <div class="skill">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/solidworks/solidworks-original.svg" alt="SolidWorks" class="skill-icon" />
+              <div class="skill-name">SolidWorks</div>
+            </div>
+            <div class="skill">
+              <img src="https://img.icons8.com/ios-filled/50/4caf50/shapr3d.png" alt="Shapr3D" class="skill-icon" />
+              <div class="skill-name">Shapr3D</div>
+            </div>
+            <div class="skill">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/photoshop/photoshop-line.svg" alt="Photoshop" class="skill-icon" />
+              <div class="skill-name">Photoshop</div>
+            </div>
+            <div class="skill">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/illustrator/illustrator-line.svg" alt="Illustrator" class="skill-icon" />
+              <div class="skill-name">Illustrator</div>
+            </div>
+            <div class="skill">
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/indesign/indesign-line.svg" alt="InDesign" class="skill-icon" />
+              <div class="skill-name">InDesign</div>
+            </div>
+            <div class="skill">
+              <img src="https://img.icons8.com/ios-filled/50/2196f3/3d-printer.png" alt="Rapid Prototyping" class="skill-icon" />
+              <div class="skill-name">Prototyping</div>
+            </div>
+            <div class="skill">
+              <img src="https://img.icons8.com/ios-glyphs/50/f44336/design--v1.png" alt="User-Centered Design" class="skill-icon" />
+              <div class="skill-name">User Design</div>
+            </div>
+            <div class="skill">
+              <img src="https://img.icons8.com/ios-filled/50/795548/factory.png" alt="Production" class="skill-icon" />
+              <div class="skill-name">Production</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
