--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
       background: #d7e5db;
-      color: #222;
+      color: #444;
     }
 
     header {
@@ -47,8 +47,7 @@
     main {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      padding: 0;
+      align-items: center;
     }
 
     .banner-section {
@@ -76,8 +75,8 @@
     }
 
     .profile-pic {
-      width: 150px !important;
-      height: 150px !important;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       object-fit: cover;
       filter: grayscale(100%);
@@ -92,14 +91,15 @@
     }
 
     .container {
-      max-width: 900px;
+      width: 85%;
+      max-width: 1200px;
       background: #fff;
       border-radius: 16px;
-      padding: 40px;
+      padding: 60px;
       display: flex;
       flex-direction: column;
-      gap: 40px;
-      margin: 60px auto;
+      gap: 60px;
+      margin: 60px 0;
     }
 
     .button {
@@ -123,6 +123,10 @@
       font-size: 1.4rem;
     }
 
+    ul {
+      padding-left: 20px;
+    }
+
     .row {
       display: flex;
       gap: 60px;
@@ -137,9 +141,9 @@
 
     .skills-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+      gap: 30px;
+      margin-top: 30px;
     }
 
     .skill {
@@ -147,39 +151,21 @@
       flex-direction: column;
       align-items: center;
       text-align: center;
+      color: #444;
     }
 
-    .skill-icon,
-    .skill-icon svg {
-      width: 50px;
-      height: 50px;
-      fill: #4caf50;
+    .skill-icon {
+      width: 48px;
+      height: 48px;
+      stroke: #444;
+      fill: none;
+      stroke-width: 2;
+      margin-bottom: 10px;
     }
 
     .skill-name {
       font-size: 0.95rem;
-      color: #444;
-    }
-
-    @media (max-width: 768px) {
-      .banner-overlay {
-        flex-direction: column;
-        align-items: flex-start;
-        left: 20px;
-        padding: 15px;
-        gap: 12px;
-        width: calc(100% - 40px);
-      }
-
-      .profile-pic {
-        width: 100px !important;
-        height: 100px !important;
-      }
-
-      .container {
-        margin: 20px;
-        padding: 20px;
-      }
+      font-weight: 500;
     }
   </style>
 </head>
@@ -195,7 +181,6 @@
   </header>
 
   <main>
-    <!-- Banner -->
     <div class="banner-section">
       <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
       <div class="banner-overlay">
@@ -207,10 +192,8 @@
       </div>
     </div>
 
-    <!-- Content -->
     <div class="container">
       <div class="row">
-        <!-- Bio -->
         <div class="column">
           <h3>Jack Simm</h3>
           <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
@@ -218,7 +201,6 @@
           <a class="button" href="cv.html">View CV</a>
         </div>
 
-        <!-- Experience + Skills -->
         <div class="column">
           <h3>Experience</h3>
           <ul>
@@ -227,42 +209,56 @@
             <li><strong>Cost Planning Analyst</strong> – Unipres UK (2021–2022)</li>
             <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
           </ul>
+        </div>
+      </div>
 
-          <h3 style="margin-top: 30px;">Skills</h3>
-          <div class="skills-grid">
-            <!-- Custom CAD Icon as Inline SVG -->
-            <div class="skill">
-              <div class="skill-icon">
-                <svg viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M2 20 L32 4 L62 20 V44 L32 60 L2 44 Z M32 8 L58 22 L32 36 L6 22 Z M32 38 V56" />
-                </svg>
-              </div>
-              <div class="skill-name">CAD Modelling</div>
-            </div>
-            <div class="skill">
-              <img src="https://img.icons8.com/ios-filled/50/000000/adobe-photoshop.png" alt="Photoshop" class="skill-icon"/>
-              <div class="skill-name">Photoshop</div>
-            </div>
-            <div class="skill">
-              <img src="https://img.icons8.com/ios-filled/50/000000/adobe-illustrator.png" alt="Illustrator" class="skill-icon"/>
-              <div class="skill-name">Illustrator</div>
-            </div>
-            <div class="skill">
-              <img src="https://img.icons8.com/ios-filled/50/000000/adobe-indesign.png" alt="InDesign" class="skill-icon"/>
-              <div class="skill-name">InDesign</div>
-            </div>
-            <div class="skill">
-              <img src="https://img.icons8.com/ios-filled/50/000000/3d-printer.png" alt="Prototyping" class="skill-icon"/>
-              <div class="skill-name">Prototyping</div>
-            </div>
-            <div class="skill">
-              <img src="https://img.icons8.com/ios-filled/50/000000/idea.png" alt="User Design" class="skill-icon"/>
-              <div class="skill-name">User Design</div>
-            </div>
-            <div class="skill">
-              <img src="https://img.icons8.com/ios-filled/50/000000/factory.png" alt="Production" class="skill-icon"/>
-              <div class="skill-name">Production</div>
-            </div>
+      <div>
+        <h3>Skills</h3>
+        <div class="skills-grid">
+          <div class="skill">
+            <svg class="skill-icon" viewBox="0 0 64 64">
+              <path d="M2 20 L32 4 L62 20 V44 L32 60 L2 44 Z M32 36 L32 60"/>
+            </svg>
+            <div class="skill-name">CAD Modelling</div>
+          </div>
+          <div class="skill">
+            <svg class="skill-icon" viewBox="0 0 24 24">
+              <path d="M4 4h16v16H4z M8 4v16 M16 4v16"/>
+            </svg>
+            <div class="skill-name">Photoshop</div>
+          </div>
+          <div class="skill">
+            <svg class="skill-icon" viewBox="0 0 24 24">
+              <circle cx="12" cy="12" r="9"/>
+              <path d="M12 6v6l4 2"/>
+            </svg>
+            <div class="skill-name">Illustrator</div>
+          </div>
+          <div class="skill">
+            <svg class="skill-icon" viewBox="0 0 24 24">
+              <path d="M4 4h16v16H4z M8 8h8v8H8z"/>
+            </svg>
+            <div class="skill-name">InDesign</div>
+          </div>
+          <div class="skill">
+            <svg class="skill-icon" viewBox="0 0 24 24">
+              <path d="M5 18v-6h14v6M9 14v4M15 14v4"/>
+              <path d="M8 6h8v4H8z"/>
+            </svg>
+            <div class="skill-name">Prototyping</div>
+          </div>
+          <div class="skill">
+            <svg class="skill-icon" viewBox="0 0 24 24">
+              <path d="M12 2a10 10 0 100 20 10 10 0 000-20zM12 6v6l4 2"/>
+            </svg>
+            <div class="skill-name">User Design</div>
+          </div>
+          <div class="skill">
+            <svg class="skill-icon" viewBox="0 0 24 24">
+              <path d="M3 21h18M4 17v-6h16v6"/>
+              <path d="M7 10V4h2v6M15 10V4h2v6"/>
+            </svg>
+            <div class="skill-name">Production</div>
           </div>
         </div>
       </div>
@@ -275,14 +271,18 @@
     const toggle = document.querySelector(".left");
     const menu = document.getElementById("dropdownMenu");
 
-    toggle.addEventListener("click", () => {
-      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    toggle.addEventListener("mouseenter", () => {
+      menu.style.display = "flex";
     });
 
-    document.addEventListener("click", (e) => {
-      if (!toggle.contains(e.target) && !menu.contains(e.target)) {
-        menu.style.display = "none";
-      }
+    toggle.addEventListener("mouseleave", () => {
+      setTimeout(() => {
+        if (!menu.matches(":hover")) menu.style.display = "none";
+      }, 200);
+    });
+
+    menu.addEventListener("mouseleave", () => {
+      menu.style.display = "none";
     });
   </script>
 </body>
