--- a/index.html
+++ b/index.html
@@ -138,35 +138,6 @@
       flex: 1;
       min-width: 300px;
     }
-
-    .skills-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-      gap: 30px;
-      margin-top: 30px;
-    }
-
-    .skill {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      color: #444;
-    }
-
-    .skill-icon {
-      width: 48px;
-      height: 48px;
-      stroke: #444;
-      fill: none;
-      stroke-width: 2;
-      margin-bottom: 10px;
-    }
-
-    .skill-name {
-      font-size: 0.95rem;
-      font-weight: 500;
-    }
   </style>
 </head>
 <body>
@@ -209,57 +180,15 @@
             <li><strong>Cost Planning Analyst</strong> – Unipres UK (2021–2022)</li>
             <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
           </ul>
-        </div>
-      </div>
 
-      <div>
-        <h3>Skills</h3>
-        <div class="skills-grid">
-          <div class="skill">
-            <svg class="skill-icon" viewBox="0 0 64 64">
-              <path d="M2 20 L32 4 L62 20 V44 L32 60 L2 44 Z M32 36 L32 60"/>
-            </svg>
-            <div class="skill-name">CAD Modelling</div>
-          </div>
-          <div class="skill">
-            <svg class="skill-icon" viewBox="0 0 24 24">
-              <path d="M4 4h16v16H4z M8 4v16 M16 4v16"/>
-            </svg>
-            <div class="skill-name">Photoshop</div>
-          </div>
-          <div class="skill">
-            <svg class="skill-icon" viewBox="0 0 24 24">
-              <circle cx="12" cy="12" r="9"/>
-              <path d="M12 6v6l4 2"/>
-            </svg>
-            <div class="skill-name">Illustrator</div>
-          </div>
-          <div class="skill">
-            <svg class="skill-icon" viewBox="0 0 24 24">
-              <path d="M4 4h16v16H4z M8 8h8v8H8z"/>
-            </svg>
-            <div class="skill-name">InDesign</div>
-          </div>
-          <div class="skill">
-            <svg class="skill-icon" viewBox="0 0 24 24">
-              <path d="M5 18v-6h14v6M9 14v4M15 14v4"/>
-              <path d="M8 6h8v4H8z"/>
-            </svg>
-            <div class="skill-name">Prototyping</div>
-          </div>
-          <div class="skill">
-            <svg class="skill-icon" viewBox="0 0 24 24">
-              <path d="M12 2a10 10 0 100 20 10 10 0 000-20zM12 6v6l4 2"/>
-            </svg>
-            <div class="skill-name">User Design</div>
-          </div>
-          <div class="skill">
-            <svg class="skill-icon" viewBox="0 0 24 24">
-              <path d="M3 21h18M4 17v-6h16v6"/>
-              <path d="M7 10V4h2v6M15 10V4h2v6"/>
-            </svg>
-            <div class="skill-name">Production</div>
-          </div>
+          <h3 style="margin-top: 30px;">Skills</h3>
+          <ul>
+            <li>CAD Modelling (SolidWorks, Shapr3D)</li>
+            <li>Adobe Suite (Photoshop, Illustrator, InDesign)</li>
+            <li>Rapid Prototyping</li>
+            <li>User-Centred Design</li>
+            <li>Production Coordination</li>
+          </ul>
         </div>
       </div>
     </div>
