--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
           <h3>Experience</h3>
           <ul>
             <li><strong>Product Development Manager</strong> – Fabb Brothers (2024)</li>
-            <li><strong>Kaizen Team Member</strong> – Unipres UK (2022–2023)</li>
-            <li><strong>Cost Planning Analyst</strong> – Unipres UK (2021–2022)</li>
+            <li><strong>Kaizen Team</strong> – Unipres UK (2022–2023)</li>
+            <li><strong>Cost Planning</strong> – Unipres UK (2021–2022)</li>
             <li><strong>Engineering Maintenance Technician</strong> – Unipres UK (2017–2021)</li>
           </ul>
 
