--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
       <div class="row">
         <div class="column">
           <h3>Jack Simm</h3>
-          <p>Product Designer and Development Manager with a strong background in engineering and manufacturing. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings.</p>
-          <p>Currently studying Product Design at Middlesex University, with experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
+          <p>A current BA Product Design student and former Product Development Manager with a strong background in manufacturing engineering. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings. With experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
           <a class="button" href="cv.html">View CV</a>
         </div>
 
