--- a/gallery.html
+++ b/gallery.html
@@ -2,111 +2,50 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gallery – Jack Simm</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: #f1f5f2;
       margin: 0;
-      background: #f7f7f7;
-      color: #222;
+      padding: 0;
+      color: #333;
     }
 
-    nav {
-      background: #fff;
-      padding: 20px;
-      text-align: center;
-      font-weight: bold;
-    }
-
-    nav a {
-      margin: 0 15px;
-      color: #222;
-      text-decoration: none;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
+    .container {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 30px;
     }
 
     h1 {
-      text-align: center;
-      margin-top: 40px;
+      color: #2f4f3f;
       font-size: 2rem;
     }
 
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+    .gallery-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 20px;
-      padding: 40px;
+      margin-top: 30px;
     }
 
-    .gallery img {
-      max-width: 100%;
-      width: auto;
-      max-height: 300px;
-      height: auto;
-      border-radius: 8px;
-      object-fit: contain;
-      transition: transform 0.3s ease;
-      cursor: pointer;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.05);
-    }
-
-    .lightbox {
-      position: fixed;
-      top: 0;
-      left: 0;
+    .gallery-grid img {
       width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.85);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-    }
-
-    .lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="cv.html">CV</a>
-  </nav>
+  <div class="container">
+    <h1>Gallery</h1>
 
-  <h1>Gallery</h1>
-
-  <div class="gallery">
-    <img src="IMG_0633.PNG" alt="Grown With Care" onclick="openLightbox(this.src)" />
-    <img src="Artboard 1.JPG" alt="Jerry Can Tool" onclick="openLightbox(this.src)" />
+    <div class="gallery-grid">
+      <img src="images/plant-pot-hinge.png" alt="CAD render of plant pot hinge mechanism" />
+      <!-- Add more images below -->
+    </div>
   </div>
-
-  <div class="lightbox" id="lightbox" onclick="closeLightbox()">
-    <img id="lightbox-img" src="" alt="Expanded view">
-  </div>
-
-  <script>
-    function openLightbox(src) {
-      document.getElementById('lightbox-img').src = src;
-      document.getElementById('lightbox').style.display = 'flex';
-    }
-
-    function closeLightbox() {
-      document.getElementById('lightbox').style.display = 'none';
-    }
-  </script>
 </body>
 </html>
