--- a/projects.html
+++ b/projects.html
@@ -2,75 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Projects – Jack Simm</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, sans-serif;
+      background: #f1f5f2;
       margin: 0;
-      background: #ffffff;
-      color: #222;
+      padding: 0;
+      color: #333;
     }
-    nav {
-      background: #f4f4f4;
-      padding: 20px;
-      text-align: center;
-      font-weight: bold;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #222;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
+
     .container {
-      max-width: 900px;
+      max-width: 1100px;
       margin: 40px auto;
-      padding: 0 20px;
+      padding: 0 30px;
     }
+
     h1 {
-      text-align: center;
+      color: #2f4f3f;
       font-size: 2rem;
-      margin-bottom: 40px;
     }
+
     .project {
-      border-left: 4px solid #222;
-      padding-left: 16px;
-      margin-bottom: 30px;
+      margin-bottom: 60px;
     }
-    .project h3 {
-      margin-bottom: 6px;
+
+    .project img {
+      width: 100%;
+      max-width: 500px;
+      border-radius: 10px;
+      margin-top: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.12);
+    }
+
+    .project-description {
+      margin-top: 12px;
+      font-size: 1rem;
+      line-height: 1.6;
     }
   </style>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="cv.html">CV</a>
-  </nav>
-
   <div class="container">
     <h1>Projects</h1>
 
     <div class="project">
-      <h3>Grown With Care</h3>
-      <p>A smart plant pot system that uses sensors to monitor moisture and ownership duration. Includes potential for app connectivity and user interaction feedback via visual indicators.</p>
+      <h2>Self-Watering Plant Pot</h2>
+      <p class="project-description">
+        A modular self-watering plant pot designed with a hinged mechanism for easy maintenance and accessibility. CAD modelled using SolidWorks, this prototype demonstrates ergonomic form and functionality for urban gardening.
+      </p>
+      <img src="images/plant-pot-hinge.png" alt="CAD render of plant pot hinge mechanism" />
     </div>
 
-    <div class="project">
-      <h3>Jerry Can Tool</h3>
-      <p>Developed an ergonomic tool for chefs to open slippery jerry cans in commercial kitchens. Focused on CAD precision, physical testing, and fit tolerance.</p>
-    </div>
-
-    <div class="project">
-      <h3>Transport Device</h3>
-      <p>A two-year design journey exploring mobility solutions. Combined original manufacturer parts with modern innovations for improved usability.</p>
-    </div>
-
+    <!-- Add more projects below if needed -->
   </div>
 </body>
 </html>
