--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,9 @@
 
     <div class="gallery-grid">
       <img src="images/plant-pot-hinge.png" alt="CAD render of plant pot hinge mechanism" />
-      <!-- Add more images below -->
+      <img src="images/plant-pot-hinge.PNG" alt="Detailed view of plant pot hinge" />
+      <img src="images/torch.PNG" alt="CAD render of torch device" />
+      <!-- Add more images below if needed -->
     </div>
   </div>
 </body>
