--- a/gallery.html
+++ b/gallery.html
@@ -43,10 +43,8 @@
     <h1>Gallery</h1>
 
     <div class="gallery-grid">
-      <img src="images/plant-pot-hinge.png" alt="CAD render of plant pot hinge mechanism" />
-      <img src="images/plant-pot-hinge.PNG" alt="Detailed view of plant pot hinge" />
+      <img src="images/plant-pot-hinge.PNG" alt="CAD render of plant pot hinge mechanism" />
       <img src="images/torch.PNG" alt="CAD render of torch device" />
-      <!-- Add more images below if needed -->
     </div>
   </div>
 </body>
