--- a/gallery.html
+++ b/gallery.html
@@ -43,8 +43,8 @@
     <h1>Gallery</h1>
 
     <div class="gallery-grid">
-      <img src="images/plant-pot-hinge.PNG" alt="CAD render of plant pot hinge mechanism" />
-      <img src="images/torch.PNG" alt="CAD render of torch device" />
+      <img src="plant-pot-hinge.PNG" alt="CAD render of plant pot hinge mechanism" />
+      <img src="torch.PNG" alt="CAD render of torch device" />
     </div>
   </div>
 </body>
