--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,26 @@
       color: #333;
     }
 
+    /* Navigation Bar */
+    nav {
+      background: #2f4f3f;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin-left: 20px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
     .container {
       max-width: 1100px;
       margin: 40px auto;
@@ -35,17 +55,84 @@
       width: 100%;
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+
+    .gallery-grid img:hover {
+      transform: scale(1.02);
+    }
+
+    /* Lightbox Styles */
+    .lightbox {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.95);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .lightbox img {
+      max-width: 90%;
+      max-height: 80%;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+      border-radius: 8px;
+    }
+
+    .lightbox:target {
+      display: flex;
+    }
+
+    .lightbox-close {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 2rem;
+      color: #333;
+      text-decoration: none;
+    }
+
+    .lightbox-close:hover {
+      color: #555;
     }
   </style>
 </head>
 <body>
+  <!-- Navigation -->
+  <nav>
+    <div><strong>Jack Simm</strong></div>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="cv.html">CV</a>
+      <a href="gallery.html">Gallery</a>
+    </div>
+  </nav>
+
+  <!-- Main Gallery Content -->
   <div class="container">
     <h1>Gallery</h1>
 
     <div class="gallery-grid">
-      <img src="plant-pot-hinge.PNG" alt="CAD render of plant pot hinge mechanism" />
-      <img src="torch.PNG" alt="CAD render of torch device" />
+      <a href="#img1"><img src="plant-pot-hinge.PNG" alt="Plant pot hinge" /></a>
+      <a href="#img2"><img src="torch.PNG" alt="Torch render" /></a>
     </div>
+  </div>
+
+  <!-- Lightbox Sections -->
+  <div id="img1" class="lightbox">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="plant-pot-hinge.PNG" alt="Plant pot hinge enlarged" />
+  </div>
+
+  <div id="img2" class="lightbox">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="torch.PNG" alt="Torch render enlarged" />
   </div>
 </body>
 </html>
