--- a/gallery.html
+++ b/gallery.html
@@ -6,34 +6,51 @@
   <title>Gallery – Jack Simm</title>
   <style>
     body {
+      margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
       background: #f1f5f2;
-      margin: 0;
-      padding: 0;
       color: #333;
     }
 
-    /* Navigation Bar */
-    nav {
-      background: #2f4f3f;
-      padding: 15px 30px;
+    header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin-left: 20px;
+      padding: 20px 40px;
       font-weight: bold;
+      position: relative;
+      background-color: #1c3f2c;
+      color: white;
     }
 
-    nav a:hover {
-      text-decoration: underline;
+    .left {
+      cursor: pointer;
     }
 
-    .container {
+    .dropdown {
+      position: absolute;
+      top: 60px;
+      left: 40px;
+      background: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      border-radius: 6px;
+      display: none;
+      flex-direction: column;
+      z-index: 10;
+    }
+
+    .dropdown a {
+      padding: 12px 20px;
+      text-decoration: none;
+      color: #222;
+      border-bottom: 1px solid #eee;
+    }
+
+    .dropdown a:hover {
+      background-color: #f5f5f5;
+    }
+
+    .gallery-container {
       max-width: 1100px;
       margin: 40px auto;
       padding: 0 30px;
@@ -63,7 +80,6 @@
       transform: scale(1.02);
     }
 
-    /* Lightbox Styles */
     .lightbox {
       display: none;
       position: fixed;
@@ -72,7 +88,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(255, 255, 255, 0.95);
+      background: rgba(255, 255, 255, 0.97);
       justify-content: center;
       align-items: center;
     }
@@ -80,12 +96,8 @@
     .lightbox img {
       max-width: 90%;
       max-height: 80%;
+      border-radius: 10px;
       box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-      border-radius: 8px;
-    }
-
-    .lightbox:target {
-      display: flex;
     }
 
     .lightbox-close {
@@ -93,46 +105,70 @@
       top: 20px;
       right: 30px;
       font-size: 2rem;
-      color: #333;
+      color: #444;
       text-decoration: none;
     }
 
     .lightbox-close:hover {
-      color: #555;
+      color: #000;
     }
   </style>
 </head>
 <body>
-  <!-- Navigation -->
-  <nav>
-    <div><strong>Jack Simm</strong></div>
-    <div>
+  <header>
+    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
+    <div class="dropdown" id="dropdownMenu">
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
       <a href="cv.html">CV</a>
-      <a href="gallery.html">Gallery</a>
     </div>
-  </nav>
+    <div class="right">Contact</div>
+  </header>
 
-  <!-- Main Gallery Content -->
-  <div class="container">
+  <div class="gallery-container">
     <h1>Gallery</h1>
-
     <div class="gallery-grid">
-      <a href="#img1"><img src="plant-pot-hinge.PNG" alt="Plant pot hinge" /></a>
-      <a href="#img2"><img src="torch.PNG" alt="Torch render" /></a>
+      <img src="plant-pot-hinge.PNG" alt="Plant pot hinge" onclick="openLightbox(this.src)" />
+      <img src="torch.PNG" alt="Torch render" onclick="openLightbox(this.src)" />
     </div>
   </div>
 
-  <!-- Lightbox Sections -->
-  <div id="img1" class="lightbox">
-    <a href="#" class="lightbox-close">&times;</a>
-    <img src="plant-pot-hinge.PNG" alt="Plant pot hinge enlarged" />
+  <div class="lightbox" id="lightbox">
+    <a href="#" class="lightbox-close" onclick="closeLightbox()">×</a>
+    <img id="lightbox-img" src="" alt="Enlarged image" />
   </div>
 
-  <div id="img2" class="lightbox">
-    <a href="#" class="lightbox-close">&times;</a>
-    <img src="torch.PNG" alt="Torch render enlarged" />
-  </div>
+  <script>
+    function toggleDropdown() {
+      const menu = document.getElementById("dropdownMenu");
+      menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+    }
+
+    function openLightbox(src) {
+      document.getElementById("lightbox-img").src = src;
+      document.getElementById("lightbox").style.display = "flex";
+    }
+
+    function closeLightbox() {
+      document.getElementById("lightbox").style.display = "none";
+    }
+
+    const toggle = document.querySelector(".left");
+    const menu = document.getElementById("dropdownMenu");
+
+    toggle.addEventListener("mouseenter", () => {
+      menu.style.display = "flex";
+    });
+
+    toggle.addEventListener("mouseleave", () => {
+      setTimeout(() => {
+        if (!menu.matches(":hover")) menu.style.display = "none";
+      }, 200);
+    });
+
+    menu.addEventListener("mouseleave", () => {
+      menu.style.display = "none";
+    });
+  </script>
 </body>
 </html>
