--- a/gallery.html
+++ b/gallery.html
@@ -9,7 +9,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
       background: #f1f5f2;
-      color: #333;
+      color: #444;
     }
 
     header {
@@ -19,8 +19,8 @@
       padding: 20px 40px;
       font-weight: bold;
       position: relative;
-      background-color: #1c3f2c;
-      color: white;
+      background-color: #d7e5db; /* Matches homepage */
+      color: #444; /* Matches homepage text */
     }
 
     .left {
