--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Jack Simm – Product Designer portfolio showcasing CAD work, prototyping, and professional experience." />
   <title>Jack Simm – Product Designer</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
     body {
       margin: 0;
@@ -19,6 +21,7 @@
       padding: 20px 40px;
       font-weight: bold;
       position: relative;
+      background: #d7e5db;
     }
 
     .left {
@@ -84,7 +87,7 @@
       border: 3px solid white;
     }
 
-    .titles h2 {
+    .titles h1, .titles h2 {
       margin: 0;
       font-weight: normal;
       color: white;
@@ -141,7 +144,7 @@
   </style>
 </head>
 <body>
-  <header>
+  <header role="navigation">
     <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
     <div class="dropdown" id="dropdownMenu">
       <a href="projects.html">Projects</a>
@@ -153,11 +156,11 @@
 
   <main>
     <div class="banner-section">
-      <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
+      <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" loading="lazy" />
       <div class="banner-overlay">
-        <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
+        <img src="profile.jpg" alt="Jack Simm" class="profile-pic" loading="lazy" />
         <div class="titles">
-          <h2>Product Designer</h2>
+          <h1>Product Designer</h1>
           <h2>Product Development Manager</h2>
         </div>
       </div>
@@ -167,7 +170,7 @@
       <div class="row">
         <div class="column">
           <h3>Jack Simm</h3>
-          <p>A current BA Product Design student and former Product Development Manager with a strong background in manufacturing engineering. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings. With experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
+          <p>A current BA Product Design student and former Product Development Manager with a strong background in manufacturing engineering. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings. With experience leading design and production teams, improving operations, and managing design projects in fast-paced environments. Check out my <a href="cv.html">CV</a>.</p>
           <a class="button" href="cv.html">View CV</a>
         </div>
 
