--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Jack Simm – Product Designer portfolio showcasing CAD work, prototyping, and professional experience." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jack Simm – Product Designer</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <style>
     body {
       margin: 0;
@@ -21,7 +19,6 @@
       padding: 20px 40px;
       font-weight: bold;
       position: relative;
-      background: #d7e5db;
     }
 
     .left {
@@ -87,7 +84,7 @@
       border: 3px solid white;
     }
 
-    .titles h1, .titles h2 {
+    .titles h2 {
       margin: 0;
       font-weight: normal;
       color: white;
@@ -103,16 +100,6 @@
       flex-direction: column;
       gap: 60px;
       margin: 60px 0;
-    }
-
-    .button {
-      background: #222;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
-      text-decoration: none;
-      display: inline-block;
-      margin-top: 20px;
     }
 
     footer {
@@ -144,7 +131,7 @@
   </style>
 </head>
 <body>
-  <header role="navigation">
+  <header>
     <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
     <div class="dropdown" id="dropdownMenu">
       <a href="projects.html">Projects</a>
@@ -156,11 +143,11 @@
 
   <main>
     <div class="banner-section">
-      <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" loading="lazy" />
+      <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
       <div class="banner-overlay">
-        <img src="profile.jpg" alt="Jack Simm" class="profile-pic" loading="lazy" />
+        <img src="profile.jpg" alt="Jack Simm" class="profile-pic" />
         <div class="titles">
-          <h1>Product Designer</h1>
+          <h2>Product Designer</h2>
           <h2>Product Development Manager</h2>
         </div>
       </div>
@@ -170,8 +157,7 @@
       <div class="row">
         <div class="column">
           <h3>Jack Simm</h3>
-          <p>A current BA Product Design student and former Product Development Manager with a strong background in manufacturing engineering. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings. With experience leading design and production teams, improving operations, and managing design projects in fast-paced environments. Check out my <a href="cv.html">CV</a>.</p>
-          <a class="button" href="cv.html">View CV</a>
+          <p>A current BA Product Design student and former Product Development Manager with a strong background in manufacturing engineering. I specialise in innovative problem-solving, user-focused design, and delivering practical solutions in real-world settings. With experience leading design and production teams, improving operations, and managing design projects in fast-paced environments.</p>
         </div>
 
         <div class="column">
