--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
       flex: 1;
       min-width: 300px;
     }
+
+    .contact-links a {
+      color: #222;
+      text-decoration: underline;
+      margin: 0 10px;
+    }
   </style>
 </head>
 <body>
@@ -179,6 +185,16 @@
           </ul>
         </div>
       </div>
+    </div>
+
+    <!-- Contact Section -->
+    <div style="text-align: center; margin-bottom: 40px;">
+      <h3>Contact Me</h3>
+      <p class="contact-links">
+        <a href="mailto:jack.simm.design@gmail.com">Email Me</a>
+        |
+        <a href="https://www.instagram.com/jack_simm_design" target="_blank">Instagram</a>
+      </p>
     </div>
   </main>
 
