--- a/index.html
+++ b/index.html
@@ -129,10 +129,30 @@
       min-width: 300px;
     }
 
+    .contact-section {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
     .contact-links a {
       color: #222;
-      text-decoration: underline;
-      margin: 0 10px;
+      text-decoration: none;
+      margin: 0 15px;
+      display: inline-flex;
+      align-items: center;
+      font-weight: bold;
+    }
+
+    .contact-links svg {
+      width: 20px;
+      height: 20px;
+      margin-right: 8px;
+      vertical-align: middle;
+      fill: #222;
+    }
+
+    .contact-links a:hover svg {
+      fill: #555;
     }
   </style>
 </head>
@@ -187,14 +207,19 @@
       </div>
     </div>
 
-    <!-- Contact Section -->
-    <div style="text-align: center; margin-bottom: 40px;">
+    <!-- Contact Section with Icons -->
+    <div class="contact-section">
       <h3>Contact Me</h3>
-      <p class="contact-links">
-        <a href="mailto:jack.simm.design@gmail.com">Email Me</a>
-        |
-        <a href="https://www.instagram.com/jack_simm_design" target="_blank">Instagram</a>
-      </p>
+      <div class="contact-links">
+        <a href="mailto:jack.simm.design@gmail.com">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.01L12 13 20 6.01V6H4zm16 12V8.83l-7.17 5.84a1 1 0 0 1-1.33 0L4 8.83V18h16z"/></svg>
+          Email Me
+        </a>
+        <a href="https://www.instagram.com/jack_simm_design" target="_blank">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm10 2c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3h10zm-5 3c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0 2c1.7 0 3 1.3 3 3s-1.3 3-3 3-3-1.3-3-3 1.3-3 3-3zm4.5-.8c-.4 0-.8.3-.8.8s.3.8.8.8.8-.3.8-.8-.3-.8-.8-.8z"/></svg>
+          Instagram
+        </a>
+      </div>
     </div>
   </main>
 
