--- a/projects.html
+++ b/projects.html
@@ -6,11 +6,45 @@
   <title>Projects – Jack Simm</title>
   <style>
     body {
+      margin: 0;
       font-family: 'Segoe UI', Tahoma, sans-serif;
       background: #f1f5f2;
-      margin: 0;
-      padding: 0;
       color: #333;
+      font-size: 17px;
+      line-height: 1.6;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      background-color: #d7e5db;
+      font-weight: 600;
+    }
+
+    .left {
+      cursor: pointer;
+    }
+
+    .dropdown {
+      position: absolute;
+      top: 60px;
+      left: 40px;
+      background: white;
+      border-radius: 6px;
+      display: none;
+      flex-direction: column;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      z-index: 10;
+    }
+
+    .dropdown a {
+      padding: 12px 20px;
+      text-decoration: none;
+      color: #222;
+      font-weight: 500;
+      font-size: 1rem;
     }
 
     .container {
@@ -21,29 +55,53 @@
 
     h1 {
       color: #2f4f3f;
-      font-size: 2rem;
+      font-size: 2.2rem;
+      margin-bottom: 40px;
     }
 
     .project {
       margin-bottom: 60px;
     }
 
-    .project img {
-      width: 100%;
-      max-width: 500px;
-      border-radius: 10px;
-      margin-top: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.12);
+    .project h2 {
+      font-size: 1.6rem;
+      color: #222;
+      margin-bottom: 10px;
     }
 
     .project-description {
-      margin-top: 12px;
       font-size: 1rem;
-      line-height: 1.6;
+      margin-bottom: 20px;
+      color: #444;
+    }
+
+    .project img {
+      width: 100%;
+      max-width: 600px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      font-size: 0.9rem;
+      color: #666;
     }
   </style>
 </head>
 <body>
+
+  <header>
+    <div class="left" onclick="toggleDropdown()">≡ Jack Simm</div>
+    <div class="dropdown" id="dropdownMenu">
+      <a href="index.html">Home</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="cv.html">CV</a>
+    </div>
+    <div class="right"></div>
+  </header>
+
   <div class="container">
     <h1>Projects</h1>
 
@@ -53,9 +111,39 @@
         A modular self-watering plant pot designed with a hinged mechanism for easy maintenance and accessibility. CAD modelled using SolidWorks, this prototype demonstrates ergonomic form and functionality for urban gardening.
       </p>
       <img src="images/plant-pot-hinge.png" alt="CAD render of plant pot hinge mechanism" />
+      <img src="plant-pot-hinge.PNG" alt="Hinge close-up render" style="margin-top: 20px;" />
     </div>
 
-    <!-- Add more projects below if needed -->
+    <!-- Additional projects can be added below -->
+
   </div>
+
+  <footer>
+    &copy; 2025 Jack Simm – Portfolio
+  </footer>
+
+  <script>
+    const toggle = document.querySelector(".left");
+    const menu = document.getElementById("dropdownMenu");
+
+    toggle.addEventListener("mouseenter", () => {
+      menu.style.display = "flex";
+    });
+
+    toggle.addEventListener("mouseleave", () => {
+      setTimeout(() => {
+        if (!menu.matches(":hover")) menu.style.display = "none";
+      }, 200);
+    });
+
+    menu.addEventListener("mouseleave", () => {
+      menu.style.display = "none";
+    });
+
+    toggle.addEventListener("click", () => {
+      const isVisible = menu.style.display === "flex";
+      menu.style.display = isVisible ? "none" : "flex";
+    });
+  </script>
 </body>
 </html>
