--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       color: #666;
     }
 
-    /* Mobile Styles */
+    /* Mobile responsiveness */
     @media (max-width: 768px) {
       header {
         padding: 16px 20px;
@@ -186,16 +186,19 @@
         flex-direction: column;
         align-items: center;
         padding: 16px;
-        bottom: 10px;
+        top: auto;
+        bottom: 20px;
         left: 10px;
         right: 10px;
-        background: rgba(0, 0, 0, 0.6);
+        transform: none;
       }
 
       .titles h2 {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         text-align: center;
         line-height: 1.4;
+        margin: 6px 0;
+        color: white;
       }
 
       .profile-pic {
