--- a/index.html
+++ b/index.html
@@ -57,19 +57,22 @@
     .banner-section {
       position: relative;
       width: 100%;
+      height: 50vh;
+      overflow: hidden;
     }
 
     .banner-img {
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
       display: block;
     }
 
     .banner-overlay {
       position: absolute;
-      top: 75%;
+      bottom: 20px;
       left: 40px;
-      transform: translateY(-50%);
       display: flex;
       align-items: center;
       gap: 24px;
@@ -182,15 +185,18 @@
         font-size: 1rem;
       }
 
+      .banner-section {
+        height: 65vh;
+      }
+
       .banner-overlay {
         flex-direction: column;
         align-items: center;
         padding: 16px;
-        top: auto;
-        bottom: 20px;
+        bottom: 10px;
         left: 10px;
         right: 10px;
-        transform: none;
+        border-radius: 10px;
       }
 
       .titles h2 {
