--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     .banner-section {
       position: relative;
       width: 100%;
-      height: 50vh;
+      height: 65vh;
       overflow: hidden;
     }
 
@@ -178,7 +178,7 @@
       color: #666;
     }
 
-    /* Mobile responsiveness */
+    /* Mobile styles */
     @media (max-width: 768px) {
       header {
         padding: 16px 20px;
@@ -186,31 +186,32 @@
       }
 
       .banner-section {
-        height: 65vh;
+        height: 70vh;
       }
 
       .banner-overlay {
         flex-direction: column;
         align-items: center;
-        padding: 16px;
-        bottom: 10px;
-        left: 10px;
-        right: 10px;
+        padding: 10px 16px;
+        bottom: 16px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(0, 0, 0, 0.4);
         border-radius: 10px;
+        width: 90%;
       }
 
       .titles h2 {
-        font-size: 1.2rem;
+        font-size: 1rem;
         text-align: center;
         line-height: 1.4;
-        margin: 6px 0;
-        color: white;
+        margin: 4px 0;
       }
 
       .profile-pic {
-        width: 100px;
-        height: 100px;
-        margin-bottom: 12px;
+        width: 80px;
+        height: 80px;
+        margin-bottom: 8px;
       }
 
       .container {
