--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.65);
       padding: 30px 40px;
       border-radius: 16px;
       text-align: center;
@@ -179,6 +179,7 @@
       .profile-overlay {
         position: static;
         transform: none;
+        background: rgba(0, 0, 0, 0.65);
         margin: 20px auto 0;
         width: 90%;
         padding: 20px;
@@ -201,6 +202,10 @@
         display: block;
         margin: 12px auto;
       }
+
+      .banner-section {
+        height: 50vh;
+      }
     }
   </style>
 </head>
@@ -214,7 +219,6 @@
     </div>
   </header>
 
-  <!-- Banner section with overlayed profile box (desktop) -->
   <div class="banner-section">
     <img src="IMG_5572.JPG" alt="Banner Image" class="banner-img" />
     <div class="profile-overlay">
@@ -226,7 +230,6 @@
     </div>
   </div>
 
-  <!-- Main content -->
   <div class="container">
     <div class="row">
       <div class="column">
@@ -257,7 +260,6 @@
     </div>
   </div>
 
-  <!-- Contact -->
   <div class="contact-section">
     <h3>Contact Me</h3>
     <div class="contact-links">
