--- a/index.html
+++ b/index.html
@@ -66,18 +66,19 @@
     .profile-overlay {
       position: absolute;
       top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      left: 40px;
+      transform: translateY(-50%);
       background: rgba(0, 0, 0, 0.65);
       padding: 30px 40px;
       border-radius: 16px;
       text-align: center;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      max-width: 300px;
     }
 
     .profile-pic {
-      width: 160px;
-      height: 160px;
+      width: 140px;
+      height: 140px;
       border-radius: 50%;
       object-fit: cover;
       filter: grayscale(100%);
@@ -171,11 +172,6 @@
     }
 
     @media (max-width: 768px) {
-      header {
-        padding: 16px 20px;
-        font-size: 1rem;
-      }
-
       .profile-overlay {
         position: static;
         transform: none;
@@ -198,13 +194,13 @@
         padding: 20px;
       }
 
+      .banner-section {
+        height: 50vh;
+      }
+
       .contact-links a {
         display: block;
         margin: 12px auto;
-      }
-
-      .banner-section {
-        height: 50vh;
       }
     }
   </style>
